--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
         (days)
       </li>
       <li>Add pagination to the component and the buttons to control it. Look at
-        the shadows that appears in the both sides if there are more pagination.
+        the shadows that appears in both sides if there are more pagination.
       </li>
       <li>Make it responsive. If the browser is resized or the parent container
         decreases, the component should adapt to its parent. To simply the
