--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,7 @@
   <app-box class="component">
     <form [formGroup]="form" novalidate>
       <img class="fake-component" src="assets/fake-component.png">
-      <!--<app-selector [days]="days"-->
-                    <!--[multiple]="true"-->
-                    <!--formControlName="selectedDays"></app-selector>-->
+      <!--<app-selector></app-selector>-->
     </form>
   </app-box>
   <app-box class="component-description">
@@ -41,8 +39,16 @@
         works properly.
       </li>
       <li>Run <b>npm run lint</b> and fix lint issues.</li>
-      <li>Generate a git patch with all changes and send it to sergio@tulotero.es.</li>
+      <li>Generate a git patch with all changes and send it to
+        sergio@tulotero.es.
+      </li>
     </ol>
+
+    <p>
+      If you have problems to figure the exercise out, you can send the patch even
+      if you aren't able to finish any of the latest points.
+    </p>
+
     Good luck! :-)
   </app-box>
   <app-box>
